--- a/components/filebrowser/frmconfigfilebrowser.lfm
+++ b/components/filebrowser/frmconfigfilebrowser.lfm
@@ -1,33 +1,33 @@
 object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
   Left = 0
-  Height = 421
+  Height = 334
   Top = 0
   Width = 504
-  ClientHeight = 421
+  ClientHeight = 334
   ClientWidth = 504
   LCLVersion = '4.99.0.0'
   TabOrder = 0
   DesignLeft = 616
   DesignTop = 247
-  object GBStartDir1: TGroupBox
+  object gbStartDir: TGroupBox
     Left = 0
-    Height = 159
+    Height = 194
     Top = 0
     Width = 504
     Align = alTop
     AutoSize = True
     BorderSpacing.Bottom = 3
     Caption = 'Root directory'
-    ClientHeight = 130
+    ClientHeight = 165
     ClientWidth = 500
     TabOrder = 0
-    object DERootDir: TDirectoryEdit
-      AnchorSideLeft.Control = RBRootThisDir
-      AnchorSideTop.Control = RBRootThisDir
+    object deRootDir: TDirectoryEdit
+      AnchorSideLeft.Control = rbRootThisDir
+      AnchorSideTop.Control = rbRootThisDir
       AnchorSideTop.Side = asrBottom
-      AnchorSideRight.Control = GBStartDir1
+      AnchorSideRight.Control = gbStartDir
       AnchorSideRight.Side = asrBottom
-      AnchorSideBottom.Control = GBStartDir1
+      AnchorSideBottom.Control = gbStartDir
       Left = 33
       Height = 32
       Top = 94
@@ -38,13 +38,12 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Left = 25
       BorderSpacing.Right = 25
-      BorderSpacing.Bottom = 4
       MaxLength = 0
       TabOrder = 0
     end
-    object RBRootThisDir: TRadioButton
-      AnchorSideLeft.Control = RBRootUserDir
-      AnchorSideTop.Control = RBRootUserDir
+    object rbRootThisDir: TRadioButton
+      AnchorSideLeft.Control = rbRootUserDir
+      AnchorSideTop.Control = rbRootUserDir
       AnchorSideTop.Side = asrBottom
       Left = 8
       Height = 22
@@ -53,9 +52,9 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       Caption = 'Always use this directory'
       TabOrder = 1
     end
-    object RBRootFileSystemRoot: TRadioButton
-      AnchorSideLeft.Control = RBRootUseProjectDir
-      AnchorSideTop.Control = RBRootUseProjectDir
+    object rbRootFileSystemRoot: TRadioButton
+      AnchorSideLeft.Control = rbRootUseProjectDir
+      AnchorSideTop.Control = rbRootUseProjectDir
       AnchorSideTop.Side = asrBottom
       Left = 8
       Height = 22
@@ -65,8 +64,8 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       Caption = 'Filesystem root'
       TabOrder = 2
     end
-    object RBRootUseProjectDir: TRadioButton
-      AnchorSideLeft.Control = GBStartDir1
+    object rbRootUseProjectDir: TRadioButton
+      AnchorSideLeft.Control = gbStartDir
       Left = 8
       Height = 22
       Top = 0
@@ -77,9 +76,9 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       TabOrder = 3
       TabStop = True
     end
-    object RBRootUserDir: TRadioButton
-      AnchorSideLeft.Control = RBRootFileSystemRoot
-      AnchorSideTop.Control = RBRootFileSystemRoot
+    object rbRootUserDir: TRadioButton
+      AnchorSideLeft.Control = rbRootFileSystemRoot
+      AnchorSideTop.Control = rbRootFileSystemRoot
       AnchorSideTop.Side = asrBottom
       Left = 8
       Height = 22
@@ -89,89 +88,32 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       Caption = 'User directory'
       TabOrder = 4
     end
-  end
-  object GBStartDir: TGroupBox
-    Left = 0
-    Height = 137
-    Top = 162
-    Width = 504
-    Align = alTop
-    AutoSize = True
-    BorderSpacing.Bottom = 3
-    Caption = 'Initial directory'
-    ClientHeight = 108
-    ClientWidth = 500
-    TabOrder = 1
-    object DEStartDir: TDirectoryEdit
-      AnchorSideLeft.Control = RBThisDir
-      AnchorSideTop.Control = RBThisDir
-      AnchorSideTop.Side = asrBottom
-      AnchorSideRight.Control = GBStartDir
-      AnchorSideRight.Side = asrBottom
-      AnchorSideBottom.Control = GBStartDir
-      Left = 33
-      Height = 32
-      Top = 72
-      Width = 442
-      ShowHidden = False
-      ButtonWidth = 23
-      NumGlyphs = 1
-      Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.Left = 25
-      BorderSpacing.Right = 25
-      BorderSpacing.Bottom = 4
-      MaxLength = 0
-      TabOrder = 0
-    end
-    object RBThisDir: TRadioButton
-      AnchorSideLeft.Control = RBLastDir
-      AnchorSideTop.Control = RBLastDir
+    object cbRememberSelectedDir: TCheckBox
+      AnchorSideLeft.Control = rbRootThisDir
+      AnchorSideTop.Control = deRootDir
       AnchorSideTop.Side = asrBottom
       Left = 8
       Height = 22
-      Top = 50
-      Width = 175
-      BorderSpacing.Top = 3
-      Caption = 'Always use this directory'
-      TabOrder = 1
-    end
-    object RBLastDir: TRadioButton
-      AnchorSideLeft.Control = RBUseProjectDir
-      AnchorSideTop.Control = RBUseProjectDir
-      AnchorSideTop.Side = asrBottom
-      Left = 8
-      Height = 22
-      Top = 25
-      Width = 180
-      BorderSpacing.Top = 3
-      Caption = 'Use last opened directory'
-      TabOrder = 2
-    end
-    object RBUseProjectDir: TRadioButton
-      AnchorSideLeft.Control = GBStartDir
-      Left = 8
-      Height = 22
-      Top = 0
-      Width = 199
-      BorderSpacing.Left = 8
-      Caption = 'Use current project directory'
-      Checked = True
-      TabOrder = 3
-      TabStop = True
+      Top = 138
+      Width = 229
+      BorderSpacing.Top = 12
+      BorderSpacing.Bottom = 5
+      Caption = 'Remember last selected directory'
+      TabOrder = 5
     end
   end
   object GBFileTree: TGroupBox
     Left = 0
     Height = 90
-    Top = 302
+    Top = 197
     Width = 504
     Align = alTop
     AutoSize = True
     Caption = 'File browser tree'
     ClientHeight = 61
     ClientWidth = 500
-    TabOrder = 2
-    object CBSyncCurrentEditor: TCheckBox
+    TabOrder = 1
+    object cbSyncCurrentEditor: TCheckBox
       AnchorSideLeft.Control = GBFileTree
       AnchorSideTop.Control = GBFileTree
       Left = 8
