--- a/components/filebrowser/frmfilebrowser.lfm
+++ b/components/filebrowser/frmfilebrowser.lfm
@@ -1,12 +1,12 @@
 object FileBrowserForm: TFileBrowserForm
-  Left = 523
-  Height = 467
-  Top = 120
-  Width = 377
+  Left = 467
+  Height = 522
+  Top = 83
+  Width = 494
   ActiveControl = TV
   Caption = 'File Browser'
-  ClientHeight = 467
-  ClientWidth = 377
+  ClientHeight = 522
+  ClientWidth = 494
   LCLVersion = '4.99.0.0'
   OnActivate = FormActivate
   OnCreate = FormCreate
@@ -15,11 +15,11 @@ object FileBrowserForm: TFileBrowserForm
     Left = 0
     Height = 42
     Top = 0
-    Width = 377
+    Width = 494
     Align = alTop
     BevelOuter = bvNone
     ClientHeight = 42
-    ClientWidth = 377
+    ClientWidth = 494
     TabOrder = 0
     object cbHidden: TCheckBox
       AnchorSideTop.Control = btnReload
@@ -59,26 +59,26 @@ object FileBrowserForm: TFileBrowserForm
     Left = 0
     Height = 5
     Top = 227
-    Width = 377
+    Width = 494
     Align = alTop
     ResizeAnchor = akTop
   end
   object pnlFiles: TPanel
     Left = 0
-    Height = 235
+    Height = 290
     Top = 232
-    Width = 377
+    Width = 494
     Align = alClient
     BevelOuter = bvNone
     Caption = 'pnlFiles'
-    ClientHeight = 235
-    ClientWidth = 377
+    ClientHeight = 290
+    ClientWidth = 494
     TabOrder = 3
     object cbFilePanel: TFilterComboBox
       Left = 0
       Height = 32
       Top = 0
-      Width = 377
+      Width = 494
       Align = alTop
       TabOrder = 0
       OnChange = cbFilePanelChange
@@ -86,13 +86,42 @@ object FileBrowserForm: TFileBrowserForm
     end
     object LV: TShellListView
       Left = 0
-      Height = 203
+      Height = 258
       Top = 32
-      Width = 377
+      Width = 494
       Align = alClient
       Color = clDefault
+      Columns = <      
+        item
+          Caption = 'Name'
+          Width = 190
+          ColumnID = cidFileName
+        end      
+        item
+          Alignment = taRightJustify
+          Caption = 'Size'
+          Width = 46
+          ColumnID = cidSize
+        end      
+        item
+          Caption = 'Type'
+          Width = 46
+          ColumnID = cidType
+        end      
+        item
+          Caption = 'Attributes'
+          Width = 46
+          ColumnID = cidAttr
+        end      
+        item
+          Caption = 'Date modified'
+          Width = 145
+          ColumnID = cidDateModified
+        end>
+      SortType = stText
       TabOrder = 1
       ShellTreeView = TV
+      FileSortType = fstFoldersFirst
       OnDblClick = LVDblClick
       OnKeyPress = LVKeyPress
       OnSelectItem = LVSelectItem
@@ -102,7 +131,7 @@ object FileBrowserForm: TFileBrowserForm
     Left = 0
     Height = 185
     Top = 42
-    Width = 377
+    Width = 494
     Align = alTop
     HideSelection = False
     HotTrack = True
