--- a/components/iconfinder/source/iconviewer.lfm
+++ b/components/iconfinder/source/iconviewer.lfm
@@ -5,6 +5,7 @@ object IconViewerFrame: TIconViewerFrame
   Width = 606
   ClientHeight = 291
   ClientWidth = 606
+  LCLVersion = '4.99.0.0'
   TabOrder = 0
   DesignLeft = 319
   DesignTop = 171
@@ -76,7 +77,6 @@ object IconViewerFrame: TIconViewerFrame
       ItemHeight = 15
       TabOrder = 0
       TextHint = 'Enter keywords here'
-      OnEditingDone = cmbFilterByKeywordsEditingDone
     end
     object btnKeywordEditor: TSpeedButton
       AnchorSideTop.Control = cmbFilterByKeywords
