FileBrowser: Restore the original version. Files in tree and the Searcher are important features. Issue #41960.

--- a/components/filebrowser/frmfilebrowser.lfm
+++ b/components/filebrowser/frmfilebrowser.lfm
@@ -1,26 +1,42 @@
 object FileBrowserForm: TFileBrowserForm
-  Left = 467
-  Height = 522
-  Top = 83
-  Width = 494
-  ActiveControl = TV
+  Left = 537
+  Height = 467
+  Top = 311
+  Width = 345
+  ActiveControl = Panel1
   Caption = 'File Browser'
-  ClientHeight = 522
-  ClientWidth = 494
+  ClientHeight = 467
+  ClientWidth = 345
   LCLVersion = '4.99.0.0'
   OnActivate = FormActivate
   OnCreate = FormCreate
   OnShow = FormShow
+  object TV: TTreeView
+    Left = 0
+    Height = 185
+    Top = 65
+    Width = 345
+    Align = alTop
+    HideSelection = False
+    Images = ilTreeview
+    ReadOnly = True
+    ScrollBars = ssAutoBoth
+    TabOrder = 0
+    Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
+    OnDblClick = TVDblClick
+    OnExpanded = TVExpanded
+    OnSelectionChanged = TVSelectionChanged
+  end
   object Panel1: TPanel
     Left = 0
     Height = 42
     Top = 0
-    Width = 494
+    Width = 345
     Align = alTop
     BevelOuter = bvNone
     ClientHeight = 42
-    ClientWidth = 494
-    TabOrder = 0
+    ClientWidth = 345
+    TabOrder = 1
     object cbHidden: TCheckBox
       AnchorSideTop.Control = btnReload
       AnchorSideBottom.Control = btnReload
@@ -32,7 +48,7 @@ object FileBrowserForm: TFileBrowserForm
       Anchors = [akTop, akLeft, akBottom]
       AutoSize = False
       Caption = 'Show hidden files'
-      TabOrder = 2
+      TabOrder = 0
       OnChange = cbHiddenChange
     end
     object btnConfigure: TButton
@@ -41,7 +57,7 @@ object FileBrowserForm: TFileBrowserForm
       Top = 7
       Width = 90
       Caption = 'Configure'
-      TabOrder = 0
+      TabOrder = 1
       OnClick = btnConfigureClick
     end
     object btnReload: TButton
@@ -50,7 +66,7 @@ object FileBrowserForm: TFileBrowserForm
       Top = 7
       Width = 90
       Caption = 'Reload'
-      TabOrder = 1
+      TabOrder = 2
       OnClick = btnReloadClick
     end
   end
@@ -58,91 +74,57 @@ object FileBrowserForm: TFileBrowserForm
     Cursor = crVSplit
     Left = 0
     Height = 5
-    Top = 227
-    Width = 494
+    Top = 250
+    Width = 345
     Align = alTop
     ResizeAnchor = akTop
   end
   object pnlFiles: TPanel
     Left = 0
-    Height = 290
-    Top = 232
-    Width = 494
+    Height = 212
+    Top = 255
+    Width = 345
     Align = alClient
     BevelOuter = bvNone
     Caption = 'pnlFiles'
-    ClientHeight = 290
-    ClientWidth = 494
+    ClientHeight = 212
+    ClientWidth = 345
     TabOrder = 3
     object cbFilePanel: TFilterComboBox
       Left = 0
-      Height = 32
+      Height = 23
       Top = 0
-      Width = 494
+      Width = 345
       Align = alTop
       TabOrder = 0
       OnChange = cbFilePanelChange
       OnSelect = cbFilePanelSelect
     end
-    object LV: TShellListView
+    object FileListBox: TFileListBox
       Left = 0
-      Height = 258
-      Top = 32
-      Width = 494
+      Height = 189
+      Top = 23
+      Width = 345
       Align = alClient
-      Color = clDefault
-      Columns = <      
-        item
-          Caption = 'Name'
-          Width = 190
-          ColumnID = cidFileName
-        end      
-        item
-          Alignment = taRightJustify
-          Caption = 'Size'
-          Width = 46
-          ColumnID = cidSize
-        end      
-        item
-          Caption = 'Type'
-          Width = 46
-          ColumnID = cidType
-        end      
-        item
-          Caption = 'Attributes'
-          Width = 46
-          ColumnID = cidAttr
-        end      
-        item
-          Caption = 'Date modified'
-          Width = 145
-          ColumnID = cidDateModified
-        end>
-      SortType = stText
+      Directory = '/home/graemeg'
+      FileType = [ftArchive, ftNormal]
+      ItemHeight = 0
       TabOrder = 1
-      ShellTreeView = TV
-      FileSortType = fstFoldersFirst
-      OnDblClick = LVDblClick
-      OnKeyPress = LVKeyPress
-      OnSelectItem = LVSelectItem
+      OnDblClick = FileListBoxDblClick
+      OnKeyPress = FileListBoxKeyPress
     end
   end
-  object TV: TShellTreeView
+  object cbTreeFilter: TFilterComboBox
     Left = 0
-    Height = 185
+    Height = 23
     Top = 42
-    Width = 494
+    Width = 345
     Align = alTop
-    HideSelection = False
-    HotTrack = True
-    ScrollBars = ssAutoBoth
-    TabOrder = 1
-    Options = [tvoAutoItemHeight, tvoHotTrack, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
-    ShellListView = LV
-    OnSelectionChanged = TVSelectionChanged
+    TabOrder = 4
+    OnChange = cbTreeFilterChange
+    OnSelect = cbTreeFilterChange
   end
   object ilTreeview: TImageList
-    Scaled = True
     Left = 88
     Top = 107
     Bitmap = {
