--- a/components/filebrowser/frmconfigfilebrowser.lfm
+++ b/components/filebrowser/frmconfigfilebrowser.lfm
@@ -1,117 +1,195 @@
 object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
   Left = 0
-  Height = 334
+  Height = 618
   Top = 0
-  Width = 504
-  ClientHeight = 334
-  ClientWidth = 504
-  LCLVersion = '4.99.0.0'
+  Width = 803
+  ClientHeight = 618
+  ClientWidth = 803
   TabOrder = 0
   DesignLeft = 616
   DesignTop = 247
-  object gbStartDir: TGroupBox
+  object GBStartDir1: TGroupBox
     Left = 0
-    Height = 162
+    Height = 191
     Top = 0
-    Width = 504
+    Width = 803
     Align = alTop
-    AutoSize = True
-    BorderSpacing.Bottom = 3
     Caption = 'Root directory'
-    ClientHeight = 133
-    ClientWidth = 500
+    ClientHeight = 173
+    ClientWidth = 801
     TabOrder = 0
-    object deRootDir: TDirectoryEdit
-      AnchorSideLeft.Control = rbRootThisDir
-      AnchorSideTop.Control = rbRootThisDir
-      AnchorSideTop.Side = asrBottom
-      AnchorSideRight.Control = gbStartDir
-      AnchorSideRight.Side = asrBottom
-      Left = 33
-      Height = 32
-      Top = 94
-      Width = 442
+    object DERootDir: TDirectoryEdit
+      Left = 38
+      Height = 34
+      Top = 128
+      Width = 754
       ShowHidden = False
       ButtonWidth = 23
       NumGlyphs = 1
       Anchors = [akTop, akLeft, akRight]
-      BorderSpacing.Left = 25
-      BorderSpacing.Right = 25
-      BorderSpacing.Bottom = 7
       MaxLength = 0
       TabOrder = 0
     end
-    object rbRootThisDir: TRadioButton
-      AnchorSideLeft.Control = rbRootUserDir
-      AnchorSideTop.Control = rbRootUserDir
-      AnchorSideTop.Side = asrBottom
-      Left = 8
-      Height = 22
-      Top = 72
-      Width = 175
+    object RBRootThisDir: TRadioButton
+      Left = 16
+      Height = 23
+      Top = 96
+      Width = 191
       Caption = 'Always use this directory'
       TabOrder = 1
     end
-    object rbRootFileSystemRoot: TRadioButton
-      AnchorSideLeft.Control = rbRootUseProjectDir
-      AnchorSideTop.Control = rbRootUseProjectDir
-      AnchorSideTop.Side = asrBottom
-      Left = 8
-      Height = 22
-      Top = 25
-      Width = 117
-      BorderSpacing.Top = 3
+    object RBRootFileSystemRoot: TRadioButton
+      Left = 14
+      Height = 23
+      Top = 36
+      Width = 131
       Caption = 'Filesystem root'
       TabOrder = 2
     end
-    object rbRootUseProjectDir: TRadioButton
-      AnchorSideLeft.Control = gbStartDir
-      Left = 8
-      Height = 22
-      Top = 0
-      Width = 199
-      BorderSpacing.Left = 8
+    object RBRootUseProjectDir: TRadioButton
+      Left = 14
+      Height = 23
+      Top = 9
+      Width = 220
       Caption = 'Use current project directory'
       Checked = True
       TabOrder = 3
       TabStop = True
     end
-    object rbRootUserDir: TRadioButton
-      AnchorSideLeft.Control = rbRootFileSystemRoot
-      AnchorSideTop.Control = rbRootFileSystemRoot
-      AnchorSideTop.Side = asrBottom
-      Left = 8
-      Height = 22
-      Top = 50
-      Width = 111
-      BorderSpacing.Top = 3
+    object RBRootUserDir: TRadioButton
+      Left = 14
+      Height = 23
+      Top = 64
+      Width = 122
       Caption = 'User directory'
       TabOrder = 4
     end
   end
+  object GBStartDir: TGroupBox
+    Left = 0
+    Height = 152
+    Top = 191
+    Width = 803
+    Align = alTop
+    Caption = 'Initial directory'
+    ClientHeight = 134
+    ClientWidth = 801
+    TabOrder = 1
+    object DEStartDir: TDirectoryEdit
+      Left = 38
+      Height = 34
+      Top = 89
+      Width = 752
+      ShowHidden = False
+      ButtonWidth = 23
+      NumGlyphs = 1
+      Anchors = [akTop, akLeft, akRight]
+      MaxLength = 0
+      TabOrder = 0
+    end
+    object RBThisDir: TRadioButton
+      Left = 14
+      Height = 23
+      Top = 65
+      Width = 191
+      Caption = 'Always use this directory'
+      TabOrder = 1
+    end
+    object RBLastDir: TRadioButton
+      Left = 14
+      Height = 23
+      Top = 36
+      Width = 198
+      Caption = 'Use last opened directory'
+      TabOrder = 2
+    end
+    object RBUseProjectDir: TRadioButton
+      Left = 14
+      Height = 23
+      Top = 8
+      Width = 220
+      Caption = 'Use current project directory'
+      Checked = True
+      TabOrder = 3
+      TabStop = True
+    end
+  end
+  object GBSearch: TGroupBox
+    Left = 0
+    Height = 129
+    Top = 456
+    Width = 803
+    Align = alTop
+    Caption = 'Search'
+    ClientHeight = 111
+    ClientWidth = 801
+    TabOrder = 2
+    object CBMatchOnlyFilename: TCheckBox
+      Left = 8
+      Height = 23
+      Top = 16
+      Width = 223
+      Caption = 'Search matches only filename'
+      TabOrder = 0
+    end
+    object CBUseAbsoluteFilenames: TCheckBox
+      Left = 8
+      Height = 23
+      Top = 48
+      Width = 191
+      Caption = 'Show absolute filenames'
+      TabOrder = 1
+    end
+    object CBUseLetters: TCheckBox
+      Left = 8
+      Height = 23
+      Top = 81
+      Width = 285
+      Caption = 'Match individual letters of search term'
+      TabOrder = 2
+    end
+  end
   object GBFileTree: TGroupBox
     Left = 0
-    Height = 90
-    Top = 165
-    Width = 504
+    Height = 113
+    Top = 343
+    Width = 803
     Align = alTop
-    AutoSize = True
-    BorderSpacing.Bottom = 3
     Caption = 'File browser tree'
-    ClientHeight = 61
-    ClientWidth = 500
-    TabOrder = 1
-    object cbSyncCurrentEditor: TCheckBox
-      AnchorSideLeft.Control = GBFileTree
-      AnchorSideTop.Control = GBFileTree
-      Left = 8
-      Height = 22
-      Top = 0
-      Width = 279
-      BorderSpacing.Left = 8
-      BorderSpacing.Bottom = 7
-      Caption = 'Keep synchronized with current editor file'
+    ClientHeight = 95
+    ClientWidth = 801
+    TabOrder = 3
+    object CBShowFilesInline: TCheckBox
+      Left = 24
+      Height = 23
+      Top = 8
+      Width = 207
+      Caption = 'Show files in main tree view'
       TabOrder = 0
+      OnChange = CBShowFilesInlineChange
+    end
+    object CBShowDirectoriesBeforeFiles: TCheckBox
+      AnchorSideTop.Control = CBShowFilesInline
+      AnchorSideTop.Side = asrBottom
+      Left = 52
+      Height = 23
+      Top = 39
+      Width = 218
+      BorderSpacing.Top = 8
+      Caption = 'Show directories before files'
+      TabOrder = 1
+    end
+    object CBSyncCurrentEditor: TCheckBox
+      AnchorSideLeft.Control = CBShowFilesInline
+      AnchorSideTop.Control = CBShowDirectoriesBeforeFiles
+      AnchorSideTop.Side = asrBottom
+      Left = 24
+      Height = 23
+      Top = 70
+      Width = 304
+      BorderSpacing.Top = 8
+      Caption = 'Keep synchronized with current editor file'
+      TabOrder = 2
     end
   end
 end
