--- a/components/tachart/demo/charttitle/main.lfm
+++ b/components/tachart/demo/charttitle/main.lfm
@@ -1,14 +1,14 @@
 object MainForm: TMainForm
   Left = 828
-  Height = 405
+  Height = 401
   Top = 332
-  Width = 537
+  Width = 561
   AutoSize = True
   Caption = 'Chart Title Demo'
-  ClientHeight = 405
-  ClientWidth = 537
+  ClientHeight = 401
+  ClientWidth = 561
+  LCLVersion = '4.99.0.0'
   OnActivate = FormActivate
-  LCLVersion = '2.3.0.0'
   object Chart1: TChart
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
@@ -16,9 +16,9 @@ object MainForm: TMainForm
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
     Left = 16
-    Height = 373
+    Height = 369
     Top = 16
-    Width = 300
+    Width = 320
     AxisList = <    
       item
         Marks.LabelBrush.Style = bsClear
@@ -36,8 +36,6 @@ object MainForm: TMainForm
         Title.Caption = 'x axis'
         Title.LabelBrush.Style = bsClear
       end>
-    Title.Brush.Color = clMenuHighlight
-    Title.Font.Color = clWindow
     Title.Font.Height = -16
     Title.Font.Style = [fsBold]
     Title.Text.Strings = (
@@ -46,20 +44,21 @@ object MainForm: TMainForm
     Title.Visible = True
     Anchors = [akTop, akLeft, akRight, akBottom]
     BorderSpacing.Around = 16
+    Color = clWhite
     Constraints.MinWidth = 300
   end
   object cbFullWidth: TCheckBox
     AnchorSideLeft.Control = rgAlignment
     AnchorSideTop.Control = gbTitleMargins
     AnchorSideTop.Side = asrBottom
-    Left = 328
+    Left = 352
     Height = 19
     Top = 308
-    Width = 93
+    Width = 94
     BorderSpacing.Top = 16
     Caption = 'Title full width'
-    OnChange = cbFullWidthChange
     TabOrder = 5
+    OnChange = cbFullWidthChange
   end
   object mmoTitleText: TMemo
     AnchorSideLeft.Control = rgAlignment
@@ -67,7 +66,7 @@ object MainForm: TMainForm
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = rgAlignment
     AnchorSideRight.Side = asrBottom
-    Left = 328
+    Left = 352
     Height = 48
     Top = 41
     Width = 187
@@ -77,30 +76,30 @@ object MainForm: TMainForm
     Lines.Strings = (
       'Chart Title'
     )
-    OnChange = mmoTitleTextChange
     TabOrder = 1
+    OnChange = mmoTitleTextChange
   end
   object cbShowAxisMarksAndTitle: TCheckBox
     AnchorSideLeft.Control = rgAlignment
     AnchorSideTop.Control = cbFullWidth
     AnchorSideTop.Side = asrBottom
-    Left = 328
+    Left = 352
     Height = 19
     Top = 333
-    Width = 151
+    Width = 150
     BorderSpacing.Top = 6
     Caption = 'Show axis marks and title'
     Checked = True
-    OnChange = cbShowAxisMarksAndTitleChange
     State = cbChecked
     TabOrder = 6
+    OnChange = cbShowAxisMarksAndTitleChange
   end
   object rgAlignment: TRadioGroup
     AnchorSideTop.Control = cbShape
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 328
+    Left = 352
     Height = 51
     Top = 149
     Width = 193
@@ -128,8 +127,8 @@ object MainForm: TMainForm
       'center'
       'right'
     )
-    OnClick = rgAlignmentClick
     TabOrder = 3
+    OnClick = rgAlignmentClick
   end
   object gbTitleMargins: TGroupBox
     AnchorSideLeft.Control = rgAlignment
@@ -137,7 +136,7 @@ object MainForm: TMainForm
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = rgAlignment
     AnchorSideRight.Side = asrBottom
-    Left = 328
+    Left = 352
     Height = 80
     Top = 212
     Width = 193
@@ -185,9 +184,9 @@ object MainForm: TMainForm
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Top = 2
       BorderSpacing.Bottom = 12
-      OnChange = seLeftMarginChange
       TabOrder = 0
       Value = 4
+      OnChange = seLeftMarginChange
     end
     object seRightMargin: TSpinEdit
       AnchorSideLeft.Control = Bevel1
@@ -201,9 +200,9 @@ object MainForm: TMainForm
       Width = 67
       Alignment = taRightJustify
       Anchors = [akTop, akLeft, akRight]
-      OnChange = seRightMarginChange
       TabOrder = 1
       Value = 4
+      OnChange = seRightMarginChange
     end
     object Bevel1: TBevel
       AnchorSideLeft.Control = gbTitleMargins
@@ -221,7 +220,7 @@ object MainForm: TMainForm
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = rgAlignment
     AnchorSideRight.Side = asrBottom
-    Left = 328
+    Left = 352
     Height = 23
     Top = 114
     Width = 187
@@ -237,15 +236,15 @@ object MainForm: TMainForm
       'RoundSide'
       'Userdefined (Rhomboid)'
     )
-    OnChange = cbShapeChange
     Style = csDropDownList
     TabOrder = 2
     Text = 'Rectangle'
+    OnChange = cbShapeChange
   end
   object lblTitleText: TLabel
     AnchorSideLeft.Control = rgAlignment
     AnchorSideTop.Control = Chart1
-    Left = 328
+    Left = 352
     Height = 15
     Top = 24
     Width = 45
@@ -256,7 +255,7 @@ object MainForm: TMainForm
     AnchorSideLeft.Control = rgAlignment
     AnchorSideTop.Control = mmoTitleText
     AnchorSideTop.Side = asrBottom
-    Left = 328
+    Left = 352
     Height = 15
     Top = 97
     Width = 32
@@ -267,22 +266,22 @@ object MainForm: TMainForm
     AnchorSideLeft.Control = rgAlignment
     AnchorSideTop.Control = cbShowAxisMarksAndTitle
     AnchorSideTop.Side = asrBottom
-    Left = 328
+    Left = 352
     Height = 19
     Top = 358
-    Width = 74
+    Width = 75
     BorderSpacing.Top = 6
     BorderSpacing.Bottom = 16
     Caption = 'Title frame'
-    OnChange = cbFrameChange
     TabOrder = 7
+    OnChange = cbFrameChange
   end
   object clbFrameColor: TColorButton
     AnchorSideLeft.Control = cbFrame
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = cbFrame
     AnchorSideTop.Side = asrCenter
-    Left = 410
+    Left = 435
     Height = 25
     Top = 355
     Width = 29
