--- a/components/tachart/demo/line/frmfast.lfm
+++ b/components/tachart/demo/line/frmfast.lfm
@@ -5,6 +5,7 @@ object FastDrawingFrame: TFastDrawingFrame
   Width = 769
   ClientHeight = 529
   ClientWidth = 769
+  LCLVersion = '4.99.0.0'
   TabOrder = 0
   DesignLeft = 314
   DesignTop = 130
