--- a/components/tachart/demo/listbox/Unit1.lfm
+++ b/components/tachart/demo/listbox/Unit1.lfm
@@ -1,13 +1,13 @@
 object Form1: TForm1
-  Left = 265
+  Left = 380
   Height = 414
-  Top = 182
+  Top = 181
   Width = 892
   Caption = 'TChartListbox demo'
   ClientHeight = 414
   ClientWidth = 892
+  LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
-  LCLVersion = '2.3.0.0'
   object Chart: TChart
     Left = 292
     Height = 414
@@ -91,7 +91,6 @@ object Form1: TForm1
     ClientWidth = 138
     TabOrder = 1
     object ChartListbox: TChartListbox
-      AnchorSideBottom.Control = Panel2
       Left = 6
       Height = 374
       Hint = 'Move up'
@@ -103,6 +102,7 @@ object Form1: TForm1
       OnItemClick = ChartListboxItemClick
       OnPopulate = ChartListboxPopulate
       OnSeriesIconDblClick = ChartListboxSeriesIconDblClick
+      Align = alClient
       Anchors = [akTop, akLeft, akBottom]
       BorderSpacing.Around = 6
       ItemHeight = 20
@@ -197,8 +197,8 @@ object Form1: TForm1
       BorderSpacing.Left = 6
       BorderSpacing.Top = 6
       Caption = 'Add series'
-      OnClick = BtnAddSeriesClick
       TabOrder = 0
+      OnClick = BtnAddSeriesClick
     end
     object BtnToggleCOS: TButton
       AnchorSideLeft.Control = BtnDeleteSeries
@@ -214,8 +214,8 @@ object Form1: TForm1
       AutoSize = True
       BorderSpacing.Left = 6
       Caption = 'Toggle cos(x)'
-      OnClick = BtnToggleCOSClick
       TabOrder = 1
+      OnClick = BtnToggleCOSClick
     end
     object BtnToggleChart: TButton
       AnchorSideLeft.Control = BtnAddSeries
@@ -230,8 +230,8 @@ object Form1: TForm1
       AutoSize = True
       BorderSpacing.Bottom = 16
       Caption = 'Toggle ChartListbox.Chart'
-      OnClick = BtnToggleChartClick
       TabOrder = 2
+      OnClick = BtnToggleChartClick
     end
     object BtnToggleSIN: TButton
       AnchorSideLeft.Control = BtnAddSeries
@@ -244,8 +244,8 @@ object Form1: TForm1
       AutoSize = True
       BorderSpacing.Left = 6
       Caption = 'Toggle sin(x)'
-      OnClick = BtnToggleSINClick
       TabOrder = 3
+      OnClick = BtnToggleSINClick
     end
     object CbShowCheckboxes: TCheckBox
       AnchorSideLeft.Control = Panel1
@@ -253,31 +253,31 @@ object Form1: TForm1
       Left = 8
       Height = 19
       Top = 306
-      Width = 114
+      Width = 111
       Anchors = [akLeft, akBottom]
       BorderSpacing.Left = 6
       BorderSpacing.Bottom = 8
       Caption = 'Show checkboxes'
       Checked = True
-      OnChange = CbShowCheckboxesChange
       State = cbChecked
       TabOrder = 4
+      OnChange = CbShowCheckboxesChange
     end
     object CbShowSeriesIcon: TCheckBox
       AnchorSideLeft.Control = CbShowCheckboxes
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = CbShowCheckboxes
-      Left = 146
+      Left = 143
       Height = 19
       Top = 306
-      Width = 112
+      Width = 110
       BorderSpacing.Left = 24
       BorderSpacing.Right = 6
       Caption = 'Show series icons'
       Checked = True
-      OnChange = CbShowSeriesIconChange
       State = cbChecked
       TabOrder = 5
+      OnChange = CbShowSeriesIconChange
     end
     object CbCheckStyle: TCheckBox
       AnchorSideLeft.Control = Panel1
@@ -285,13 +285,13 @@ object Form1: TForm1
       Left = 8
       Height = 19
       Top = 333
-      Width = 91
+      Width = 89
       Anchors = [akLeft, akBottom]
       BorderSpacing.Left = 6
       BorderSpacing.Bottom = 8
       Caption = 'Radiobuttons'
-      OnChange = CbCheckStyleChange
       TabOrder = 6
+      OnChange = CbCheckStyleChange
     end
     object Memo: TMemo
       AnchorSideLeft.Control = Panel1
@@ -328,7 +328,7 @@ object Form1: TForm1
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = Label2
       AnchorSideTop.Side = asrCenter
-      Left = 201
+      Left = 198
       Height = 23
       Top = 331
       Width = 60
@@ -336,15 +336,15 @@ object Form1: TForm1
       BorderSpacing.Left = 4
       BorderSpacing.Right = 6
       MinValue = 1
-      OnChange = EdColumnsChange
       TabOrder = 8
       Value = 1
+      OnChange = EdColumnsChange
     end
     object Label2: TLabel
       AnchorSideLeft.Control = CbShowSeriesIcon
       AnchorSideTop.Control = CbCheckStyle
       AnchorSideTop.Side = asrCenter
-      Left = 146
+      Left = 143
       Height = 15
       Top = 335
       Width = 51
@@ -362,8 +362,8 @@ object Form1: TForm1
       BorderSpacing.Left = 6
       BorderSpacing.Top = 6
       Caption = 'Delete series'
-      OnClick = BtnDeleteSeriesClick
       TabOrder = 9
+      OnClick = BtnDeleteSeriesClick
     end
     object CbKeepSeriesOut: TCheckBox
       AnchorSideLeft.Control = Panel1
@@ -372,14 +372,14 @@ object Form1: TForm1
       Left = 8
       Height = 19
       Top = 387
-      Width = 245
+      Width = 242
       Anchors = [akLeft, akBottom]
       BorderSpacing.Left = 6
       BorderSpacing.Right = 6
       BorderSpacing.Bottom = 6
       Caption = 'Keep sin and cos series out of ChartListBox'
-      OnChange = CbKeepSeriesOutChange
       TabOrder = 10
+      OnChange = CbKeepSeriesOutChange
     end
     object Bevel1: TBevel
       AnchorSideLeft.Control = Panel1
@@ -409,8 +409,8 @@ object Form1: TForm1
       BorderSpacing.Left = 6
       BorderSpacing.Right = 6
       Caption = 'Add point'
-      OnClick = BtnAddPointClick
       TabOrder = 11
+      OnClick = BtnAddPointClick
     end
     object CbInverted: TCheckBox
       AnchorSideLeft.Control = CbKeepSeriesOut
@@ -418,12 +418,12 @@ object Form1: TForm1
       Left = 8
       Height = 19
       Top = 360
-      Width = 63
+      Width = 61
       Anchors = [akLeft, akBottom]
       BorderSpacing.Bottom = 8
       Caption = 'Inverted'
-      OnChange = CbInvertedChange
       TabOrder = 12
+      OnChange = CbInvertedChange
     end
   end
   object RandomChartSource: TRandomChartSource
