--- a/components/tachart/demo/liveview_paned/main.lfm
+++ b/components/tachart/demo/liveview_paned/main.lfm
@@ -2,17 +2,18 @@ object Form1: TForm1
   Left = 609
   Height = 693
   Top = 149
-  Width = 496
+  Width = 512
   Caption = 'MainForm'
   ClientHeight = 693
-  ClientWidth = 496
+  ClientWidth = 512
+  LCLVersion = '4.99.0.0'
+  OnActivate = FormActivate
   OnCreate = FormCreate
-  LCLVersion = '2.3.0.0'
   object Chart1: TChart
     Left = 0
     Height = 624
     Top = 0
-    Width = 496
+    Width = 512
     AxisList = <    
       item
         Grid.Color = clMenu
@@ -85,7 +86,7 @@ object Form1: TForm1
         Title.LabelFont.Orientation = 900
         Title.LabelFont.Style = [fsBold]
         Title.Visible = True
-        Title.Caption = 'Acceleration, cm/s<sup>2</sup> '
+        Title.Caption = '<b>Acceleration, cm/s<sup>2</sup></b>'
         Title.LabelBrush.Style = bsClear
         Title.PositionOnMarks = True
         Title.TextFormat = tfHTML
@@ -116,13 +117,13 @@ object Form1: TForm1
     Left = 8
     Height = 49
     Top = 636
-    Width = 480
+    Width = 496
     Align = alBottom
     AutoSize = True
     BorderSpacing.Around = 8
     BevelOuter = bvNone
     ClientHeight = 49
-    ClientWidth = 480
+    ClientWidth = 496
     TabOrder = 1
     object cbLiveView: TCheckBox
       AnchorSideLeft.Control = Panel1
@@ -131,55 +132,54 @@ object Form1: TForm1
       Left = 0
       Height = 19
       Top = 3
-      Width = 114
+      Width = 112
       Caption = 'Scrolling live view'
       Checked = True
-      OnChange = cbLiveViewChange
       State = cbChecked
       TabOrder = 0
+      OnChange = cbLiveViewChange
     end
     object cbFrozenAxes: TCheckBox
       AnchorSideLeft.Control = cbLiveView
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = btnReset
       AnchorSideTop.Side = asrCenter
-      Left = 146
+      Left = 144
       Height = 19
       Top = 3
-      Width = 122
+      Width = 119
       BorderSpacing.Left = 32
       Caption = 'Frozen vertical axes'
       Checked = True
-      OnChange = cbFrozenAxesChange
       State = cbChecked
       TabOrder = 1
+      OnChange = cbFrozenAxesChange
     end
     object btnReset: TButton
       AnchorSideLeft.Control = btnStopResume
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = Panel1
-      Left = 387
+      Left = 382
       Height = 25
       Top = 0
       Width = 75
       BorderSpacing.Left = 4
-      BorderSpacing.Right = 8
       Caption = 'Reset'
-      OnClick = btnResetClick
       TabOrder = 2
+      OnClick = btnResetClick
     end
     object btnStopResume: TButton
       AnchorSideLeft.Control = cbFrozenAxes
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = Panel1
-      Left = 308
+      Left = 303
       Height = 25
       Top = 0
       Width = 75
       BorderSpacing.Left = 40
       Caption = 'Stop'
-      OnClick = btnStopResumeClick
       TabOrder = 3
+      OnClick = btnStopResumeClick
     end
     object Label1: TLabel
       AnchorSideLeft.Control = cbLiveView
@@ -206,16 +206,16 @@ object Form1: TForm1
       DecimalPlaces = 0
       MaxValue = 60
       MinValue = 1
-      OnChange = seViewportSizeChange
       TabOrder = 4
       Value = 10
+      OnChange = seViewportSizeChange
     end
   end
   object Bevel1: TBevel
     Left = 0
     Height = 4
     Top = 624
-    Width = 496
+    Width = 512
     Align = alBottom
     Shape = bsBottomLine
   end
