--- a/components/filebrowser/frmconfigfilebrowser.lfm
+++ b/components/filebrowser/frmconfigfilebrowser.lfm
@@ -5,6 +5,7 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
   Width = 803
   ClientHeight = 618
   ClientWidth = 803
+  LCLVersion = '4.99.0.0'
   TabOrder = 0
   DesignLeft = 616
   DesignTop = 247
@@ -144,8 +145,8 @@ object FileBrowserOptionsFrame: TFileBrowserOptionsFrame
       Left = 8
       Height = 23
       Top = 81
-      Width = 285
-      Caption = 'Match individual letters of search term'
+      Width = 577
+      Caption = 'letters of search term can be not consecutive (other letters can appear in between)'
       TabOrder = 2
     end
   end
