* Allow to go to config dialog from file searcher

--- a/components/filebrowser/frmfilesearcher.lfm
+++ b/components/filebrowser/frmfilesearcher.lfm
@@ -1,14 +1,14 @@
 object FileSearcherForm: TFileSearcherForm
-  Left = 593
-  Height = 214
-  Top = 407
-  Width = 556
+  Left = 943
+  Height = 252
+  Top = 454
+  Width = 504
   ActiveControl = edtSearch
   BorderIcons = [biMaximize]
   BorderStyle = bsSizeToolWin
   Caption = 'Search file'
-  ClientHeight = 214
-  ClientWidth = 556
+  ClientHeight = 252
+  ClientWidth = 504
   Position = poScreenCenter
   LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
@@ -16,8 +16,8 @@ object FileSearcherForm: TFileSearcherForm
   object bpFileSearch: TButtonPanel
     Left = 6
     Height = 56
-    Top = 152
-    Width = 544
+    Top = 190
+    Width = 492
     OKButton.Name = 'OKButton'
     OKButton.DefaultCaption = True
     HelpButton.Name = 'HelpButton'
@@ -50,7 +50,7 @@ object FileSearcherForm: TFileSearcherForm
     Height = 34
     Hint = 'Search term, must contain at least 2 characters'
     Top = 4
-    Width = 299
+    Width = 196
     Anchors = [akTop, akLeft, akRight]
     ParentShowHint = False
     ShowHint = True
@@ -60,9 +60,9 @@ object FileSearcherForm: TFileSearcherForm
   end
   object LBFiles: TListBox
     Left = 8
-    Height = 125
+    Height = 136
     Top = 40
-    Width = 541
+    Width = 489
     Anchors = [akTop, akLeft, akRight, akBottom]
     ItemHeight = 0
     MultiSelect = True
@@ -76,7 +76,7 @@ object FileSearcherForm: TFileSearcherForm
     AnchorSideTop.Control = edtSearch
     AnchorSideBottom.Control = edtSearch
     AnchorSideBottom.Side = asrBottom
-    Left = 412
+    Left = 308
     Height = 34
     Top = 4
     Width = 137
@@ -85,5 +85,92 @@ object FileSearcherForm: TFileSearcherForm
     ItemIndex = 0
     TabOrder = 3
     OnChange = cbFilterChange
+  end
+  object SBConfigure: TSpeedButton
+    AnchorSideTop.Control = edtSearch
+    AnchorSideBottom.Control = edtSearch
+    AnchorSideBottom.Side = asrBottom
+    Left = 455
+    Height = 34
+    Top = 4
+    Width = 34
+    Anchors = [akTop, akRight, akBottom]
+    Glyph.Data = {
+      36090000424D3609000000000000360000002800000018000000180000000100
+      2000000000000009000064000000640000000000000000000000FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00D5630E12B1430017FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF001C1C1C0900000004FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00EB884974E2752CFCD9600FFFB046009A99330005FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00AAAA
+      AA09646464BC242424A800000004FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFB38014F49E65FCEB8949FFE2752CFFD9600FFFAE4600AB80400004FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00A8A8
+      A87EA6A6A6FF656565FF262626AA00000004FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00DF752B18FDB382FFF49E65FFEB8949FFE2752CFFD9600FFFB04600A48000
+      0002FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00A3A3A319A8A8
+      A8F3A8A8A8FFA6A6A6FF646464BC1C1C1C09FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00E071269CFDB382FFF49E65FFEB8949FFE2752CFFD9600FFFAF46
+      009CFF000001FFFFFF00FFFFFF00FFFFFF00FFFFFF00000000028181818EA8A8
+      A8FFA8A8A8F3A7A7A77D9F9F9F08FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00CC660005E07125ABFDB382FFF49E65FFEB8949FFE2752CFFD960
+      0FFFAE47009BFF000001FFFFFF00FFFFFF0000000002656565A1E2E2E2FF8585
+      858EAAAAAA18FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00AA550003E17126A0FDB382FFF49E65FFEB8949FFE275
+      2CFFD9600FFFAF46008FFFFFFF0000000002646464A0E2E2E2FF6E6E6EA70000
+      0003FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FF800002E071269CFDB382FFF49E65FFEB89
+      49FFE2752CFFD9600FFFAD460083646464A0E2E2E2FF6E6E6EA700000003FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FF000001DF712590FDB382FFF49E
+      65FFEB8949FFE2752CFFD9600FFFC99775FF6E6E6EA700000003FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FF000001E071268CFDB3
+      82FFF49E65FFEB8949FFE2752CFFD9600FFFAC440078FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00DF71
+      2678FDB382FFF49E65FFEB8949FFE2752CFFD9600FFEB046006AFFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00000000026464
+      64A0E2AE8BFFFDB382FFF49E65FFEB8949FFE2752CFFD9600FFEAF460066FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF000000800C000085790000979543437BB6E2E2
+      E2FF6E6E6EA7DC6E256DFDB382FEF49E65FFEB8949FFE2752CFFD9600FFDAE46
+      005B8A8A8A309797977D9393934E00000001FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF0000008615000084D2000098FF0000ABFF0101BFFF4A4A
+      8FB600000002FFFFFF00DF722769FDB382FEF49E65FFEB8949FFE0752EFFB38A
+      70F0CDCDCDF0E8E8E8FFD4D4D4FAA3A3A3C28888881EFFFFFF00FFFFFF00FFFF
+      FF00FFFFFF0000008615000084D3000098FF0000ABFF0000BFFF0000D2FF3737
+      E595FFFFFF00FFFFFF00FFFFFF00E070275BFDB382FBF19D66FFB79E8CF4EDED
+      EDFFF3F3F3FFF0F0F0FFEAEAEAFFE3E3E3FFA8A8A8CD8B8B8B0BFFFFFF00FFFF
+      FF0000008615000084D2000098FF0000ABFF0000BFFF0000D2FF3737E7FF7474
+      FB79FFFFFF00FFFFFF00FFFFFF00FFFFFF00DF722657BEA696F0ECECECFEF9F9
+      F9FFFAFAFAFFF4F4F4FFEEEEEEFFE7E7E7FFDCDCDCFF9B9B9B91FFFFFF000000
+      8615000084D2000098FF0000ABFF0000BFFF0000D2FF3737E7FF7373FBD28080
+      FF0CFFFFFF00FFFFFF00FFFFFF00FFFFFF008A8A8A30CDCDCDF0F3F3F3FFFAFA
+      FAFFF4F4F4FEC8C8C8E6B6B6B6CEB7B7B7D7DFDFDFFFACACACCA000080140000
+      84D2000098FF0000ABFF0000BFFF0000D2FF3737E7FF7373FBD28686FF15FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF009898987EE8E8E8FFF0F0F0FFF4F4
+      F4FFC8C8C8E680808018FFFFFF008F8F8F20AAAAAAD0AEAEAED7000084B20000
+      98FF0000ABFF0000BFFF0000D2FF3737E7FF7373FBD28686FF15FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0090909053D6D6D6FAEAEAEAFFEEEE
+      EEFFB6B6B6CFFFFFFF00FFFFFF00FFFFFF00878787209494948F000098F90000
+      ABFF0000BFFF0000D2FF3737E7FF7373FBD28686FF15FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF0000000001A4A4A4C2E3E3E3FFE7E7
+      E7FFB7B7B7D78F8F8F20FFFFFF00FFFFFF00FFFFFF00FFFFFF000000ABC80000
+      BFFF0000D2FF3737E7FF7373FBD38686FF15FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF008F8F8F20A8A8A8CFDCDC
+      DCFFDFDFDFFFABABABD187878720FFFFFF00FFFFFF00FFFFFF000000C1290000
+      D2CA3737E7F37373FBAD8080FF14FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF008080800C9A9A
+      9A93ACACACCBAFAFAFD89494948FFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
+      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00
+    }
+    OnClick = SBConfigureClick
   end
 end
