--- a/components/tachart/demo/multi/Main.lfm
+++ b/components/tachart/demo/multi/Main.lfm
@@ -2,10 +2,10 @@ object MainForm: TMainForm
   Left = 424
   Height = 459
   Top = 304
-  Width = 529
+  Width = 600
   Caption = 'Multi-Valued Series Demo'
   ClientHeight = 459
-  ClientWidth = 529
+  ClientWidth = 600
   Position = poScreenCenter
   LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
@@ -13,10 +13,10 @@ object MainForm: TMainForm
     Left = 0
     Height = 459
     Top = 0
-    Width = 529
-    ActivePage = tsBubble
+    Width = 600
+    ActivePage = tsOHLC
     Align = alClient
-    TabIndex = 0
+    TabIndex = 3
     TabOrder = 0
     object tsBubble: TTabSheet
       Caption = 'Bubble'
