--- a/components/tachart/demo/stateseries/usimpleganttframe.lfm
+++ b/components/tachart/demo/stateseries/usimpleganttframe.lfm
@@ -5,6 +5,7 @@ object SimpleGanttFrame: TSimpleGanttFrame
   Width = 935
   ClientHeight = 381
   ClientWidth = 935
+  LCLVersion = '4.99.0.0'
   TabOrder = 0
   DesignLeft = 615
   DesignTop = 307
